tests/integration/snapshots/integration__conformance__n_number_-nan.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
[-NaN]
stderr ---
error: expected digit following minus sign, found `N`
 --> stdin:1:2
  |
1 | [-NaN]
  |  ^
  |  |
  |  minus sign found here
